fix some center aligning content

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -257,11 +257,11 @@ a.cocktailNameLink:hover {
   background-color: #343a40;
   border: none;
   color: white;
-  padding: 20px 20px;
+  padding: 10px 10px;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  font-size: 3vw;
+  font-size: 2vw;
   font-weight: 600;
   width: 25%;
   transition-duration: 0.4s;
@@ -282,7 +282,7 @@ a.cocktailNameLink:hover {
   padding: 8px 20px;
   text-align: center;
   text-decoration: none;
-  font-size: 3vw;
+  font-size: 20px;
   margin: 20px 0;
   cursor: pointer;
   font-weight: 600;
